--- a/css/style.css
+++ b/css/style.css
@@ -204,15 +204,56 @@ hr{
     background: transparent;
 }
 .col-3{
-    background-color:#ffb3b3;
-    text-align:center;
+    background-color: #ffb3b3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
 }
+
+.col-3 p {
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
+}
+
 .col-9{
     text-align: left;
+    justify-content: center; /* Align horizontal */
+    align-items: center; /* Align vertical */
 } /* for michelin stars introduction page */
 
 
-/* first page */
+/* font */
 h1 {
+    font-family: "AvenirNext-Regular", "Helvetica Neue Light", sans-serif;
+}
 
+h3 {
+    font-size: 30px;
+    font-family: "AvenirNext-Regular", "Helvetica Neue Light", sans-serif;
+}
+
+h4, h5 {
+    font-family: "AvenirNext-Regular", "Helvetica Neue Light", sans-serif;
+    margin-bottom: 20px;
+}
+
+
+p {
+    font-family: "AvenirNext-Regular", "Helvetica Neue Light", sans-serif;
+}
+
+h6 {
+    font-family: "AvenirNext-Regular", "Helvetica Neue Light", sans-serif;
+    font-weight: 9;
+}
+
+#wordCloud-text{
+    font-size: 30px;
+    margin-top: 120px;
+}
+
+#sunburst-text {
+    font-size: 40px;
 }
